-added a musicAdapter in the Classic Rock and and Pop fragment.
cc

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
@@ -32,7 +33,8 @@
         tools:layout="@layout/main_fragment" >
         <action
             android:id="@+id/action_classic_to_exo_player"
-            app:destination="@id/exo_player" />
+            app:destination="@id/exo_player"
+            />
     </fragment>
 
     <fragment
